--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 server.servlet.context-path=/bijoux 
+
+server.port= 8081
+#spring.security.user.name=admin
+#spring.security.user.password=123
