--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+	
 		<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
@@ -95,9 +92,26 @@
 		<dependency> 
 			<groupId>org.springframework.boot</groupId> 
 			<artifactId>spring-boot-starter-data-rest</artifactId> 
-		</dependency> 
+		</dependency>
+		<dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-validation</artifactId> 
+</dependency>
 
 
+		<dependency>
+			<groupId>com.abir</groupId>
+			<artifactId>Bijoux-1</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			 <groupId>org.thymeleaf.extras</groupId>
+ 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+ 		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
